src/components/video-grid.module.scss
/**
 * 新版首页
 * 使用的是 .video-card-body 的样式
 * 在B站自己的首页中, .bili-grid > 2200px 是分 7 列, .video-card-body > 2200px 分6列
 */

.video-grid {
  --video-card-border-radius: 6px;
  display: grid;
  position: relative;
  width: 100%;
  grid-gap: 20px 12px;
  grid-template-columns: repeat(var(--col), minmax(0, 1fr));
}

.new-card-style {
  --video-card-border-radius: 15px;
}

/**
 * bili-feed4
 * 取自 .battle-feed-area .battle-feed-body
 */

.video-grid-bili-feed4 {
  // grid-gap: 60px 20px; // original
  grid-gap: 20px 20px;

  :global {
    .ant-divider-horizontal.ant-divider-with-text {
      margin-bottom: -15px;
      margin-top: -15px;
      &:first-of-type {
        margin-top: 0;
      }
    }
  }
}

@mixin homepage-bili-feed4-mixin($col) {
  .video-grid-bili-feed4 {
    --col: #{$col};
    &.limit-one-line > *:nth-of-type(1n + #{$col + 1}) {
      display: none !important;
    }
    &.limit-two-lines > *:nth-of-type(1n + #{$col * 2 + 1}) {
      display: none !important;
    }
  }
}
@media (width < 1400px) {
  @include homepage-bili-feed4-mixin(4);
}
@media (width >= 1400px) {
  @include homepage-bili-feed4-mixin(5);
}

/**
 * @container query
 */

.video-grid-container {
  container-type: inline-size;
}

// 20px <= $gap-row <= 40px
// max(min(40px, 1.6vw), 20px);
$row-gap: clamp(20px, 1.6vw, 40px);
$col-gap: 20px;

.video-grid-custom {
  --col: 4;

  // gap
  column-gap: $col-gap;
  row-gap: 0;
  --row-gap: #{$row-gap};

  :global {
    .bili-video-card {
      margin-bottom: var(--row-gap);
    }

    .ant-divider-horizontal.ant-divider-with-text {
      margin-bottom: 5px;
      // margin-top: -20px;
      margin-top: calc(10px - var(--row-gap));
      &:first-of-type {
        margin-top: 0;
      }
    }
  }
}

// 使用 .video-grid 增加权重, fix dark-reader 兼容性
// https://greasyfork.org/zh-CN/scripts/443530-bilibili-app-recommend/discussions/222126
// dark-reader 会将 没有@container 修饰的 .vdieo-grid-custom 再次添加, 导致 --col 覆盖为 2
// 也可以使用 :where 降低默认 .video-grid-custom 权重

// bili-feed4: <1440px 4列, 1440px 4列
@container (width >= #{1440px * 0.9 - 20px}) {
  .video-grid.video-grid-custom {
    --col: 5;
  }
}

$card-base-width: 300px;
@for $i from 6 through 10 {
  @container (inline-size >= #{($card-base-width + $i * 5px) * $i + $col-gap * ($i - 1)}) {
    .video-grid.video-grid-custom {
      --col: #{$i};
    }
  }
}

/**
 * 双列模式
 */

.narrow-mode {
  --col: 2 !important;
}

